css/images.css
html{
	background-color:#DED8BD;
}

nav a:link {
	color: #DED8BD;
}

nav a:visited{
	color: #BFDBDA;
}

nav a:hover{
	color:#FFFFFF;
}

nav{
	align-items: left;
}

header{
	background: linear-gradient(120deg, #4C635B, #4A592F, #826324);
 	font-weight: 400;
	font-style: normal;
 	font-size: 1.5rem;
	color: #fff;
	padding: 20px;
	text-align: center;
}

header p {
	color: #DED8BD;
}

body{
  	font-weight: 400;
  	font-style: normal;
  	font-size: 1.5rem;
	margin: 0;
	color: #253238;
}

main{
	max-width: 960px;
	margin: 0 auto;
	padding: 40px 20px; 
}

footer{
	color:#4A592F;
	padding: 24px;
	text-align: left;
	font-size: 1.2rem;
}

a:link{
	color:#4A592F;
}

a:visited{
	color:#4C635B;
}

a:hover{
    text-decoration: none;
    color: #826324;
}

.wrapper{
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: space-evenly;
	align-items: space-evenly;
	padding-top: 10px;
	margin: 0.5rem;
	row-gap: 15px;
}

.image{
	height:500px;
	position: relative;
}

img{
	height:100%;
	display: block;
	margin: auto;
	border-radius: 16px;
}

.content{
	width: 100%;
	height: 100%;
	position: absolute;
	top:0;
	left: 0;
	background-color: rgba(0, 0, 0, 0.5);
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	opacity: 0;
	transition: 0.6s;
	border-radius: 16px;
}

.content:hover{
	opacity: 1;
}

.content h1{
	font-size: 42px;
	color: #FFFFFF;
	margin-bottom: 10px;
}

.content p{
	font-size: 21px;
	font-weight: bold;
	color:#FFFFFF;
}

.content > *{
	transform: translateY(25px);
	transition: transform 0.6s;
}

.content:hover > *{
	transform: translateY(0px);
}

